# agenttester

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
deploy/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  user_data.sh
src/agenttester/: __init__.py  agent_runner.py  cli.py  config.py  git_manager.py  orchestrator.py  presets.py  report.py
tests/: conftest.py  test_agent_runner.py  test_cli.py  test_config.py  test_git_manager.py  test_report.py
